Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59664

QSqlDatabasePrivate exploses open file limit and causes crash

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • 5.8.0, 5.9
    • SQL Support
    • None
    • Mac OS X 10.9.5, Qt 5.8.0, sqlite3 3.17.0 (from MacPorts)

      I have been trying to set up a comprehensive Qt5 + KF5 help database: a collection of symlinks to the .qch files in various locations bundled together in a single directory (/opt/local/share/docs/qch).

      This works mostly fine on Linux, but on Mac I get errors like below.

      In KDevelop, configured to handle Qt help documentation in /opt/local/share/docs/qch:

      QSqlDatabasePrivate::removeDatabase: connection '/opt/local/share/doc/qch/FrameworkIntegration.qchFromIndexProvider-140270062382192-2' is still in use, all queries will cease to work.
      QThreadPipe: Unable to create pipe: Too many open files
      QEventDispatcherUNIXPrivate(): Can not continue without a thread pipe
      QSqlDatabasePrivate::removeDatabase: connection '/opt/local/share/doc/qch/KCMUtils.qchFromQHelpContentProvider-140270062451872-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '/opt/local/share/doc/qch/KCMUtils.qchFromIndexProvider-140270062465968-2' is still in use, all queries will cease to work.
      QThreadPipe: Unable to create pipe: Too many open files
      QEventDispatcherUNIXPrivate(): Can not continue without a thread pipe
      QThreadPipe: Unable to create pipe: Too many open files
      QEventDispatcherUNIXPrivate(): Can not continue without a thread pipe
      2017-03-22 21:38:45.874 kdevelop.bin[60759:5e03] Cannot load Interface Builder file '/System/Library/Frameworks/AppKit.framework/Resources/English.lproj/NSAlertPanel.nib'
      QtDBus: cannot relay signals from parent QObject(0x7f932b462ec0 "") unless they are emitted in the object's thread QThread(0x7f9328411090 ""). Current thread is QThread(0x7f932b71d3d0 "").
      QReadWriteLock: destroying locked QReadWriteLock
      KCrash: Application 'kdevelop.bin' crashing...
      

      In Qt's own Assistant when I open it with a hand-built collection file that represents /opt/local/share/docs/qch :

      <snipped many more similar lines>
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtvirtualkeyboard.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtwebchannel.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtwebsockets.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtwidgets.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtwinextras.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtx11extras.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtxml.qch-140226590990256-2' is still in use, all queries will cease to work.
      QSqlDatabasePrivate::removeDatabase: connection '../../../../../../opt/local/share/doc/qt5/qtxmlpatterns.qch-140226590990256-2' is still in use, all queries will cease to work.
      QThreadPipe: Unable to create pipe: Too many open files
      QEventDispatcherUNIXPrivate(): Can not continue without a thread pipe
      QThreadPipe: Unable to create pipe: Too many open files
      QEventDispatcherUNIXPrivate(): Can not continue without a thread pipe
      2017-03-22 21:39:25.566 Assistant[60783:6b0f] Cannot load Interface Builder file 'NSAlertPanel'
      2017-03-22 21:39:25.566 Assistant[60783:6a17] Cannot load Interface Builder file 'NSAlertPanel'
      

      I've tried increasing the open file limit, to no avail.

        For Gerrit Dashboard: QTBUG-59664
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            rjvbertin René Bertin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes