Call removeDatabase() when there is no QSqlDatabase object in scope

If there is a QSqlDatabase or QSqlQuery object around still that is
active then when removing the database it will output a warning. Since
the database was not opened here we just need to ensure the object is
deleted first before we remove it.

Task-number: QTBUG-59664
Change-Id: I95d658e178e3e5b95231e4d9525bf5994f5969c5
Reviewed-by: René J.V. Bertin <rjvbertin@gmail.com>
Reviewed-by: Konstantin Tokarev <annulen@yandex.ru>